[package]
name = "ohos-sys"
version = "0.8.6"
edition = "2021"
description = "Bindings to the native API of OpenHarmony OS"
license = "Apache-2.0"
repository = "https://github.com/openharmony-rs/ohos-sys"
keywords = ["OpenHarmony", "HarmonyOS", "ffi"]
readme = "Readme.md"
resolver = "2"
rust-version = "1.78.0"

[workspace]
members = [
    "components/*",
    "components/multimedia/image_framework",
    "components/multimedia/player_framework",
]
exclude = ["components/multimedia", "scripts"]

[workspace.dependencies]
ohos-sys-opaque-types = { version = "0.1.9", path = "components/opaque-types" }

[dependencies]
document-features = { version = "0.2", optional = true }
arkui-sys = { version = "0.3.3", optional = true, path = "components/arkui" }
ohos-accesstoken-sys = { version = "0.1.0", optional = true, path = "components/accesstoken" }
ohos-asset-store-sys = { version = "0.1.0", optional = true, path = "components/asset" }
ohos-basic-services-kit-sys = { version = "0.1.0", optional = true, path = "components/basic-services-kit" }
ohos-crypto-sys = { version = "0.1.0", optional = true, path = "components/crypto" }
ohos-huks-sys = { version = "0.1.0", optional = true, path = "components/huks" }
hilog-sys = { version = "0.1.7", optional = true, path = "components/hilog" }
hitrace-sys = { version = "0.1.9", optional = true, path = "components/hitrace" }
ohos-abilitykit-sys = { version = "0.1.4", optional = true, path = "components/abilitykit" }
ohos-deviceinfo-sys = { version = "0.1.6", optional = true, path = "components/deviceinfo" }
ohos-drawing-sys = { path = "components/drawing", version = "0.3.3", optional = true }
ohos-image-kit-sys = { version = "0.3.4", optional = true, path = "components/multimedia/image_framework" }
ohos-ime-sys = { version = "0.2.3", optional = true, path = "components/inputmethod" }
ohaudio-sys = { version = "0.1.0", optional = true, path = "components/ohaudio" }
arkweb-sys = { version = "0.1.0", optional = true, path = "components/web" }
ohos-ipckit-sys = { version = "0.1.0", optional = true, path = "components/ipckit" }
ohos-locationkit-sys = { version = "0.1.0", optional = true, path = "components/locationkit" }
ohos-netmanager-sys = { version = "0.1.0", optional = true, path = "components/netmanager" }
ohos-net-ssl-sys = { version = "0.1.0", optional = true, path = "components/net_ssl" }
ohos-netstack-sys = { version = "0.1.0", optional = true, path = "components/netstack" }
ohos-input-sys = { version = "0.3.3", optional = true, path = "components/multimodal-input" }
ohos-pasteboard-sys = { version = "0.1.3", optional = true, path = "components/pasteboard" }
ohos-rawfile-sys = { version = "0.1.3", optional = true, path = "components/rawfile" }
ohos-rdb-sys = { version = "0.1.0", optional = true, path = "components/rdb" }
ohos-sensors-sys = { version = "0.1.0", optional = true, path = "components/sensors" }
ohos-sys-opaque-types = { workspace = true }
ohos-window-sys = { version = "0.1.5", optional = true, path = "components/window" }
ohos-vsync-sys = { version = "0.1.5", optional = true, path = "components/vsync" }
udmf-sys = { version = "0.1.3", optional = true, path = "components/udmf" }
xcomponent-sys = { version = "0.3.5", optional = true, path = "components/xcomponent" }
ohos-window-manager-sys = { version = "0.1.3", optional = true, path = "components/window_manager" }


[features]
default = ["api-10"]
## Enables bindings to the AbilitKit. Re-exports the `ohos-abilitykit-sys` library.
abilitykit = ["dep:ohos-abilitykit-sys"]
## Enables bindings to the AbilityAccessControl (AccessToken) NDK. Re-exports `ohos-accesstoken-sys`.
accesstoken = ["dep:ohos-accesstoken-sys"]
## Enables bindings to the native ArkUI module. Re-exports the `arkui-sys` library.
arkui = ["dep:arkui-sys"]
## Enables bindings to the AssetStoreKit (Asset NDK). Re-exports `ohos-asset-store-sys`.
asset-store = ["dep:ohos-asset-store-sys"]
## Enables bindings to BasicServicesKit. Re-exports `ohos-basic-services-kit-sys`.
## Use the sub-API features (`basic-services-kit-commonevent`, …) to select
## individual NDKs within the kit.
basic-services-kit = ["dep:ohos-basic-services-kit-sys"]
## Enables the CommonEvent NDK from BasicServicesKit.
basic-services-kit-commonevent = ["basic-services-kit", "ohos-basic-services-kit-sys?/commonevent"]
## Enables the BatteryInfo NDK from BasicServicesKit. Requires API-level 13.
basic-services-kit-battery-info = ["basic-services-kit", "ohos-basic-services-kit-sys?/battery-info"]
## Enables the Print NDK from BasicServicesKit.
basic-services-kit-print = ["basic-services-kit", "ohos-basic-services-kit-sys?/print"]
## Enables the Scan NDK from BasicServicesKit.
basic-services-kit-scan = ["basic-services-kit", "ohos-basic-services-kit-sys?/scan"]
## Enables the OS Account NDK from BasicServicesKit.
basic-services-kit-os-account = ["basic-services-kit", "ohos-basic-services-kit-sys?/os-account"]
## Enables the Time Service NDK from BasicServicesKit.
basic-services-kit-time-service = ["basic-services-kit", "ohos-basic-services-kit-sys?/time-service"]
## Enables bindings to the CryptoArchitectureKit. Re-exports `ohos-crypto-sys`.
crypto = ["dep:ohos-crypto-sys"]
## Enables bindings to the Universal Keystore Kit (HUKS). Re-exports `ohos-huks-sys`.
huks = ["dep:ohos-huks-sys"]
## Enables bindings to `deviceinfo.h`. Re-exports `ohos-deviceinfo-sys`
deviceinfo = ["dep:ohos-deviceinfo-sys"]
## Enables bindings to `native_drawing`. Re-exports `ohos-drawing-sys`.
drawing = ["dep:ohos-drawing-sys", "arkui-sys?/drawing"]
## Enables bindings to `hilog`
hilog = ["dep:hilog-sys"]
## Enables bindings to `hitrace`
hitrace = ["dep:hitrace-sys"]
## Enables bindings to `inputmethod` from the IME-Kit. Empty if API-level < 12.
inputmethod = ["dep:ohos-ime-sys"]
## Enables bindings to the IPCKit framework.
ipckit = ["dep:ohos-ipckit-sys"]
## Enables bindings to the LocationKit framework.
locationkit = ["dep:ohos-locationkit-sys"]
## Enables bindings to the NetworkKit netmanager framework.
netmanager = ["dep:ohos-netmanager-sys"]
## Enables bindings to the NetworkKit net_ssl framework.
net_ssl = ["dep:ohos-net-ssl-sys"]
## Enables bindings to the NetworkKit netstack framework.
netstack = ["dep:ohos-netstack-sys"]
## Bindings to the [Image Kit](https://docs.openharmony.cn/pages/v5.0/en/application-dev/media/image/image-overview.md)
image-kit = ["dep:ohos-image-kit-sys"]
## Bindings to the Multimodal Input kit.
multimodal-input = ["dep:ohos-input-sys"]
## Enables bindings to the OHAudio module.
ohaudio = ["dep:ohaudio-sys"]
## Enables bindings to the Web module.
web = ["dep:arkweb-sys"]
## Enables bindings to `napi`
napi = []
## Enables bindings to `native_buffer`
native_buffer = ['dep:ohos-window-sys']
## Enables bindings to `native_image`
native_image = ['dep:ohos-window-sys']
## Enables bindings to `native_window`
native_window = ['dep:ohos-window-sys']
## Enables to the ohos pasteboard (clipboard)
pasteboard = ['dep:ohos-pasteboard-sys']
## Enables bindings to `rawfile`
rawfile = ['ohos-rawfile-sys']
## Enables bindings to the relational database (RDB)
rdb = ["dep:ohos-rdb-sys"]
## Enables bindings to the sensors module.
sensors = ["dep:ohos-sensors-sys"]
## Enables bindings to the Unified Data Management Framework (UDMF)
udmf = ['dep:udmf-sys']
## Enables bindings to `native_vsync`
vsync = ["dep:ohos-vsync-sys"]
## Enables bindings to `native_xcomponent`
xcomponent = ["dep:xcomponent-sys"]
## Enables bindings to `window_manager`
window_manager = ["dep:ohos-window-manager-sys"]

## Enables all components listed above. Orthogonal to `api-XX` features.
all-components = [
    "abilitykit",
    "accesstoken",
    "arkui",
    "asset-store",
    "basic-services-kit",
    "basic-services-kit-commonevent",
    "basic-services-kit-battery-info",
    "basic-services-kit-print",
    "basic-services-kit-scan",
    "basic-services-kit-os-account",
    "basic-services-kit-time-service",
    "crypto",
    "huks",
    "deviceinfo",
    "drawing",
    "hilog",
    "hitrace",
    "inputmethod",
    "ipckit",
    "locationkit",
    "netmanager",
    "net_ssl",
    "netstack",
    "image-kit",
    "image-kit-image-packer",
    "image-kit-image-receiver",
    "image-kit-image-source",
    "image-kit-pixelmap",
    "multimodal-input",
    "ohaudio",
    "napi",
    "native_buffer",
    "native_image",
    "native_window",
    "pasteboard",
    "rawfile",
    "rdb",
    "sensors",
    "xcomponent",
    "udmf",
    "vsync",
    "web",
    "window_manager",
]

#! ### OpenHarmony API level
#! This crate by default exposes bindings for API-level 10.
#! Optionally enable one of the `api-*` features to get access to bindings for newer
#! OpenHarmony versions.

## No effect. API-10 bindings can't be deselected. The feature exists for internal purposes.
api-10 = []
## Enables bindings for OpenHarmony API-level 11
api-11 = [
    "api-10",
    "ohos-asset-store-sys?/api-11",
    "ohos-huks-sys?/api-11",
    "hilog-sys?/api-11",
    "hitrace-sys?/api-11",
    "ohos-deviceinfo-sys?/api-11",
    "ohos-drawing-sys?/api-11",
    "ohaudio-sys?/api-11",
    "arkweb-sys?/api-11",
    "ohos-netmanager-sys?/api-11",
    "ohos-net-ssl-sys?/api-11",
    "ohos-netstack-sys?/api-11",
    "ohos-vsync-sys?/api-11",
    "ohos-window-sys?/api-11",
    "ohos-rawfile-sys?/api-11",
    "ohos-rdb-sys?/api-11",
    "ohos-sensors-sys?/api-11",
    "udmf-sys?/api-11",
    "xcomponent-sys?/api-11",
]
## Enables bindings for OpenHarmony API-level 12
api-12 = [
    "api-11",
    "arkui-sys?/api-12",
    "ohos-accesstoken-sys?/api-12",
    "ohos-asset-store-sys?/api-12",
    "ohos-basic-services-kit-sys?/api-12",
    "ohos-crypto-sys?/api-12",
    "ohos-huks-sys?/api-12",
    "hilog-sys?/api-12",
    "hitrace-sys?/api-12",
    "ohos-abilitykit-sys?/api-12",
    "ohos-deviceinfo-sys?/api-12",
    "ohos-drawing-sys?/api-12",
    "ohos-image-kit-sys?/api-12",
    "ohos-ime-sys?/api-12",
    "ohos-ipckit-sys?/api-12",
    "ohos-input-sys?/api-12",
    "ohos-locationkit-sys?/api-12",
    "ohos-netmanager-sys?/api-12",
    "ohos-net-ssl-sys?/api-12",
    "ohos-netstack-sys?/api-12",
    "ohaudio-sys?/api-12",
    "arkweb-sys?/api-12",
    "ohos-pasteboard-sys?/api-12",
    "ohos-rawfile-sys?/api-12",
    "ohos-rdb-sys?/api-12",
    "ohos-sensors-sys?/api-12",
    "ohos-vsync-sys?/api-12",
    "ohos-window-sys?/api-12",
    "ohos-window-manager-sys?/api-12",
    "udmf-sys?/api-12",
    "xcomponent-sys?/api-12",
]

## Enables bindings for OpenHarmony API-level 13
api-13 = [
    "api-12",
    "arkui-sys?/api-13",
    "ohos-accesstoken-sys?/api-13",
    "ohos-asset-store-sys?/api-13",
    "ohos-basic-services-kit-sys?/api-13",
    "ohos-crypto-sys?/api-13",
    "ohos-huks-sys?/api-13",
    "hilog-sys?/api-13",
    "hitrace-sys?/api-13",
    "ohos-abilitykit-sys?/api-13",
    "ohos-deviceinfo-sys?/api-13",
    "ohos-drawing-sys?/api-13",
    "ohos-image-kit-sys?/api-13",
    "ohos-ime-sys?/api-13",
    "ohos-ipckit-sys?/api-13",
    "ohos-input-sys?/api-13",
    "ohos-locationkit-sys?/api-13",
    "ohos-netmanager-sys?/api-13",
    "ohos-net-ssl-sys?/api-13",
    "ohos-netstack-sys?/api-13",
    "ohaudio-sys?/api-13",
    "arkweb-sys?/api-13",
    "ohos-pasteboard-sys?/api-13",
    "ohos-rawfile-sys?/api-13",
    "ohos-rdb-sys?/api-13",
    "ohos-sensors-sys?/api-13",
    "ohos-vsync-sys?/api-13",
    "ohos-window-sys?/api-13",
    "ohos-window-manager-sys?/api-13",
    "udmf-sys?/api-13",
    "xcomponent-sys?/api-13",
]

## Enables bindings for OpenHarmony API-level 14
api-14 = [
    "api-13",
    "arkui-sys?/api-14",
    "ohos-accesstoken-sys?/api-14",
    "ohos-asset-store-sys?/api-14",
    "ohos-basic-services-kit-sys?/api-14",
    "ohos-crypto-sys?/api-14",
    "ohos-huks-sys?/api-14",
    "hilog-sys?/api-14",
    "hitrace-sys?/api-14",
    "ohos-abilitykit-sys?/api-14",
    "ohos-deviceinfo-sys?/api-14",
    "ohos-drawing-sys?/api-14",
    "ohos-image-kit-sys?/api-14",
    "ohos-ime-sys?/api-14",
    "ohos-ipckit-sys?/api-14",
    "ohos-input-sys?/api-14",
    "ohos-locationkit-sys?/api-14",
    "ohos-netmanager-sys?/api-14",
    "ohos-net-ssl-sys?/api-14",
    "ohos-netstack-sys?/api-14",
    "ohaudio-sys?/api-14",
    "arkweb-sys?/api-14",
    "ohos-pasteboard-sys?/api-14",
    "ohos-rawfile-sys?/api-14",
    "ohos-rdb-sys?/api-14",
    "ohos-sensors-sys?/api-14",
    "ohos-vsync-sys?/api-14",
    "ohos-window-manager-sys?/api-14",
    "ohos-window-sys?/api-14",
    "udmf-sys?/api-14",
    "xcomponent-sys?/api-14",
]

## Enables bindings for OpenHarmony API-level 15
api-15 = [
    "api-14",
    "arkui-sys?/api-15",
    "ohos-accesstoken-sys?/api-15",
    "ohos-asset-store-sys?/api-15",
    "ohos-basic-services-kit-sys?/api-15",
    "ohos-crypto-sys?/api-15",
    "ohos-huks-sys?/api-15",
    "hilog-sys?/api-15",
    "hitrace-sys?/api-15",
    "ohos-abilitykit-sys?/api-15",
    "ohos-deviceinfo-sys?/api-15",
    "ohos-drawing-sys?/api-15",
    "ohos-image-kit-sys?/api-15",
    "ohos-ime-sys?/api-15",
    "ohos-ipckit-sys?/api-15",
    "ohos-input-sys?/api-15",
    "ohos-locationkit-sys?/api-15",
    "ohos-netmanager-sys?/api-15",
    "ohos-net-ssl-sys?/api-15",
    "ohos-netstack-sys?/api-15",
    "ohaudio-sys?/api-15",
    "arkweb-sys?/api-15",
    "ohos-pasteboard-sys?/api-15",
    "ohos-rawfile-sys?/api-15",
    "ohos-rdb-sys?/api-15",
    "ohos-sensors-sys?/api-15",
    "ohos-vsync-sys?/api-15",
    "ohos-window-manager-sys?/api-15",
    "ohos-window-sys?/api-15",
    "udmf-sys?/api-15",
    "xcomponent-sys?/api-15",
]

## Enables bindings for OpenHarmony API-level 16.
api-16 = ["api-15",
    "arkui-sys?/api-16",
    "ohos-accesstoken-sys?/api-16",
    "ohos-asset-store-sys?/api-16",
    "ohos-basic-services-kit-sys?/api-16",
    "ohos-crypto-sys?/api-16",
    "ohos-huks-sys?/api-16",
    "hilog-sys?/api-16",
    "hitrace-sys?/api-16",
    "ohos-abilitykit-sys?/api-16",
    "ohos-deviceinfo-sys?/api-16",
    "ohos-drawing-sys?/api-16",
    "ohos-image-kit-sys?/api-16",
    "ohos-ime-sys?/api-16",
    "ohos-ipckit-sys?/api-16",
    "ohos-input-sys?/api-16",
    "ohos-locationkit-sys?/api-16",
    "ohos-netmanager-sys?/api-16",
    "ohos-net-ssl-sys?/api-16",
    "ohos-netstack-sys?/api-16",
    "ohaudio-sys?/api-16",
    "arkweb-sys?/api-16",
    "ohos-pasteboard-sys?/api-16",
    "ohos-rawfile-sys?/api-16",
    "ohos-rdb-sys?/api-16",
    "ohos-sensors-sys?/api-16",
    "ohos-vsync-sys?/api-16",
    "ohos-window-manager-sys?/api-16",
    "ohos-window-sys?/api-16",
    "udmf-sys?/api-16",
    "xcomponent-sys?/api-16",
]
## Enables bindings for OpenHarmony API-level 17.
api-17 = ["api-16",
    "arkui-sys?/api-17",
    "ohos-accesstoken-sys?/api-17",
    "ohos-asset-store-sys?/api-17",
    "ohos-basic-services-kit-sys?/api-17",
    "ohos-crypto-sys?/api-17",
    "ohos-huks-sys?/api-17",
    "hilog-sys?/api-17",
    "hitrace-sys?/api-17",
    "ohos-abilitykit-sys?/api-17",
    "ohos-deviceinfo-sys?/api-17",
    "ohos-drawing-sys?/api-17",
    "ohos-image-kit-sys?/api-17",
    "ohos-ime-sys?/api-17",
    "ohos-ipckit-sys?/api-17",
    "ohos-input-sys?/api-17",
    "ohos-locationkit-sys?/api-17",
    "ohos-netmanager-sys?/api-17",
    "ohos-net-ssl-sys?/api-17",
    "ohos-netstack-sys?/api-17",
    "ohaudio-sys?/api-17",
    "arkweb-sys?/api-17",
    "ohos-pasteboard-sys?/api-17",
    "ohos-rawfile-sys?/api-17",
    "ohos-rdb-sys?/api-17",
    "ohos-sensors-sys?/api-17",
    "ohos-vsync-sys?/api-17",
    "ohos-window-manager-sys?/api-17",
    "ohos-window-sys?/api-17",
    "udmf-sys?/api-17",
    "xcomponent-sys?/api-17",
]
## Enables bindings for OpenHarmony API-level 18 (5.1.0).
api-18 = ["api-17",
    "arkui-sys?/api-18",
    "ohos-accesstoken-sys?/api-18",
    "ohos-asset-store-sys?/api-18",
    "ohos-basic-services-kit-sys?/api-18",
    "ohos-crypto-sys?/api-18",
    "ohos-huks-sys?/api-18",
    "hilog-sys?/api-18",
    "hitrace-sys?/api-18",
    "ohos-abilitykit-sys?/api-18",
    "ohos-deviceinfo-sys?/api-18",
    "ohos-drawing-sys?/api-18",
    "ohos-image-kit-sys?/api-18",
    "ohos-ime-sys?/api-18",
    "ohos-ipckit-sys?/api-18",
    "ohos-input-sys?/api-18",
    "ohos-locationkit-sys?/api-18",
    "ohos-netmanager-sys?/api-18",
    "ohos-net-ssl-sys?/api-18",
    "ohos-netstack-sys?/api-18",
    "ohaudio-sys?/api-18",
    "arkweb-sys?/api-18",
    "ohos-pasteboard-sys?/api-18",
    "ohos-rawfile-sys?/api-18",
    "ohos-rdb-sys?/api-18",
    "ohos-sensors-sys?/api-18",
    "ohos-vsync-sys?/api-18",
    "ohos-window-manager-sys?/api-18",
    "ohos-window-sys?/api-18",
    "udmf-sys?/api-18",
    "xcomponent-sys?/api-18",
]
## Enables bindings for OpenHarmony API-level 19
api-19 = ["api-18",
    "arkui-sys?/api-19",
    "ohos-accesstoken-sys?/api-19",
    "ohos-asset-store-sys?/api-19",
    "ohos-basic-services-kit-sys?/api-19",
    "ohos-crypto-sys?/api-19",
    "ohos-huks-sys?/api-19",
    "hilog-sys?/api-19",
    "hitrace-sys?/api-19",
    "ohos-abilitykit-sys?/api-19",
    "ohos-deviceinfo-sys?/api-19",
    "ohos-drawing-sys?/api-19",
    "ohos-image-kit-sys?/api-19",
    "ohos-ime-sys?/api-19",
    "ohos-ipckit-sys?/api-19",
    "ohos-input-sys?/api-19",
    "ohos-locationkit-sys?/api-19",
    "ohos-netmanager-sys?/api-19",
    "ohos-net-ssl-sys?/api-19",
    "ohos-netstack-sys?/api-19",
    "ohaudio-sys?/api-19",
    "arkweb-sys?/api-19",
    "ohos-pasteboard-sys?/api-19",
    "ohos-rawfile-sys?/api-19",
    "ohos-rdb-sys?/api-19",
    "ohos-sensors-sys?/api-19",
    "ohos-vsync-sys?/api-19",
    "ohos-window-manager-sys?/api-19",
    "ohos-window-sys?/api-19",
    "udmf-sys?/api-19",
    "xcomponent-sys?/api-19",
]
## Enables bindings for OpenHarmony API-level 20
api-20 = ["api-19",
    "arkui-sys?/api-20",
    "ohos-accesstoken-sys?/api-20",
    "ohos-asset-store-sys?/api-20",
    "ohos-basic-services-kit-sys?/api-20",
    "ohos-crypto-sys?/api-20",
    "ohos-huks-sys?/api-20",
    "hilog-sys?/api-20",
    "hitrace-sys?/api-20",
    "ohos-abilitykit-sys?/api-20",
    "ohos-deviceinfo-sys?/api-20",
    "ohos-drawing-sys?/api-20",
    "ohos-image-kit-sys?/api-20",
    "ohos-ime-sys?/api-20",
    "ohos-ipckit-sys?/api-20",
    "ohos-input-sys?/api-20",
    "ohos-locationkit-sys?/api-20",
    "ohos-netmanager-sys?/api-20",
    "ohos-net-ssl-sys?/api-20",
    "ohos-netstack-sys?/api-20",
    "ohaudio-sys?/api-20",
    "arkweb-sys?/api-20",
    "ohos-pasteboard-sys?/api-20",
    "ohos-rawfile-sys?/api-20",
    "ohos-rdb-sys?/api-20",
    "ohos-sensors-sys?/api-20",
    "ohos-vsync-sys?/api-20",
    "ohos-window-manager-sys?/api-20",
    "ohos-window-sys?/api-20",
    "udmf-sys?/api-20",
    "xcomponent-sys?/api-20",
]
## Enables bindings for OpenHarmony API-level 21
api-21 = ["api-20",
    "arkui-sys?/api-21",
    "ohos-accesstoken-sys?/api-21",
    "ohos-asset-store-sys?/api-21",
    "ohos-basic-services-kit-sys?/api-21",
    "ohos-crypto-sys?/api-21",
    "ohos-huks-sys?/api-21",
    "hilog-sys?/api-21",
    "hitrace-sys?/api-21",
    "ohos-abilitykit-sys?/api-21",
    "ohos-deviceinfo-sys?/api-21",
    "ohos-drawing-sys?/api-21",
    "ohos-image-kit-sys?/api-21",
    "ohos-ime-sys?/api-21",
    "ohos-ipckit-sys?/api-21",
    "ohos-input-sys?/api-21",
    "ohos-locationkit-sys?/api-21",
    "ohos-netmanager-sys?/api-21",
    "ohos-net-ssl-sys?/api-21",
    "ohos-netstack-sys?/api-21",
    "ohaudio-sys?/api-21",
    "arkweb-sys?/api-21",
    "ohos-pasteboard-sys?/api-21",
    "ohos-rawfile-sys?/api-21",
    "ohos-rdb-sys?/api-21",
    "ohos-sensors-sys?/api-21",
    "ohos-vsync-sys?/api-21",
    "ohos-window-manager-sys?/api-21",
    "ohos-window-sys?/api-21",
    "udmf-sys?/api-21",
    "xcomponent-sys?/api-21",
]
## Enables bindings for OpenHarmony API-level 22
api-22 = ["api-21",
    "arkui-sys?/api-22",
    "ohos-accesstoken-sys?/api-22",
    "ohos-asset-store-sys?/api-22",
    "ohos-basic-services-kit-sys?/api-22",
    "ohos-crypto-sys?/api-22",
    "ohos-huks-sys?/api-22",
    "hilog-sys?/api-22",
    "hitrace-sys?/api-22",
    "ohos-abilitykit-sys?/api-22",
    "ohos-deviceinfo-sys?/api-22",
    "ohos-drawing-sys?/api-22",
    "ohos-image-kit-sys?/api-22",
    "ohos-ime-sys?/api-22",
    "ohos-ipckit-sys?/api-22",
    "ohos-input-sys?/api-22",
    "ohos-locationkit-sys?/api-22",
    "ohos-netmanager-sys?/api-22",
    "ohos-net-ssl-sys?/api-22",
    "ohos-netstack-sys?/api-22",
    "ohaudio-sys?/api-22",
    "arkweb-sys?/api-22",
    "ohos-pasteboard-sys?/api-22",
    "ohos-rawfile-sys?/api-22",
    "ohos-rdb-sys?/api-22",
    "ohos-sensors-sys?/api-22",
    "ohos-vsync-sys?/api-22",
    "ohos-window-manager-sys?/api-22",
    "ohos-window-sys?/api-22",
    "udmf-sys?/api-22",
    "xcomponent-sys?/api-22",
]
## Enables bindings for OpenHarmony API-level 23
api-23 = ["api-22",
    "arkui-sys?/api-23",
    "ohos-accesstoken-sys?/api-23",
    "ohos-asset-store-sys?/api-23",
    "ohos-basic-services-kit-sys?/api-23",
    "ohos-crypto-sys?/api-23",
    "ohos-huks-sys?/api-23",
    "hilog-sys?/api-23",
    "hitrace-sys?/api-23",
    "ohos-abilitykit-sys?/api-23",
    "ohos-deviceinfo-sys?/api-23",
    "ohos-drawing-sys?/api-23",
    "ohos-image-kit-sys?/api-23",
    "ohos-ime-sys?/api-23",
    "ohos-ipckit-sys?/api-23",
    "ohos-input-sys?/api-23",
    "ohos-locationkit-sys?/api-23",
    "ohos-netmanager-sys?/api-23",
    "ohos-net-ssl-sys?/api-23",
    "ohos-netstack-sys?/api-23",
    "ohaudio-sys?/api-23",
    "arkweb-sys?/api-23",
    "ohos-pasteboard-sys?/api-23",
    "ohos-rawfile-sys?/api-23",
    "ohos-rdb-sys?/api-23",
    "ohos-sensors-sys?/api-23",
    "ohos-vsync-sys?/api-23",
    "ohos-window-manager-sys?/api-23",
    "ohos-window-sys?/api-23",
    "udmf-sys?/api-23",
    "xcomponent-sys?/api-23",
]

#! ### Features of dependencies
#!
#! Re-exports features of individual component crates of `ohos-sys`.
#! In general, it is recommended to depend on the individual component crates

image-kit-image-packer = ["ohos-image-kit-sys/image-packer"]
image-kit-image-receiver = ["ohos-image-kit-sys/image-receiver"]
image-kit-image-source = ["ohos-image-kit-sys/image-source"]
image-kit-pixelmap = ["ohos-image-kit-sys/pixelmap"]
xcomponent-keyboard-types = ["xcomponent-sys/keyboard-types"]

#! ### Internal features
## Document available features when building the documentation
document-features = ["dep:document-features"]

[package.metadata.docs.rs]
features = ["document-features"]
targets = [
    "aarch64-unknown-linux-ohos",
    "armv7-unknown-linux-ohos",
    "x86_64-unknown-linux-ohos",
]
all-features = true
